updated java files

--- a/TransientReservation/nbproject/project.properties
+++ b/TransientReservation/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/TransientReservation.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.46.jar=E:\\9352B-G2-FINALS\\admin\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-8.0.11.jar=mysql-connector-java-8.0.11\\mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
